# ESP32-Rust-Rotencoder

./: Cargo.toml  README.md  diagram.json  wokwi.toml
src/: lib.rs  main.rs  rotencoder.rs
