[package]
name = "esp-rust-rotencoder"
version = "0.1.0"
authors = ["Bart Karalus <bart@bforge.co>"]
edition = "2021"
resolver = "2"
rust-version = "1.76"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = "1.0.82"
esp-idf-svc = "0.48.1"
esp-idf-hal = "0.43.1"

[build-dependencies]
embuild = "0.31.4"
