[package]
name = "esp-rust-rotencoder"
version = "0.1.0"
authors = ["Bart Karalus <bart@bforge.co>"]
edition = "2021"
resolver = "2"
rust-version = "1.76"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = "1.0.82"
esp-idf-svc = "0.48.1"
esp-idf-hal = "0.43.1"
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.34.0", features = ["binstart"] }
ssd1306 = "0.8.4"
display-interface = "0.5.0"
display-interface-i2c = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.1"

[build-dependencies]
embuild = "0.31.4"

[patch.crates-io]
cc = { git = "https://github.com/rust-lang/cc-rs", tag = "1.0.83" }
